Modify preprocessing function

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -1311,7 +1311,7 @@
     "accuracy = metrics.accuracy_score(y_test, best_rf.predict(x_test))\n",
     "accuracy_lst.append(accuracy)\n",
     "print(accuracy_lst)\n",
-    "model_arr.append('RandomForestClassifier')"
+    "model_arr.append('RandomForestClassifier')\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -1359,8 +1359,43 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "X.info"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fuck\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"fuck\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
