--- a/static_analysis.ipynb
+++ b/static_analysis.ipynb
@@ -10,10 +10,9 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib import colors, cm\n",
+    "from matplotlib import cm\n",
     "import matplotlib.patches as mpatches\n",
     "import matplotlib\n",
-    "from prettytable import PrettyTable\n",
     "import warnings\n",
     "import json\n",
     "warnings.filterwarnings('ignore')\n",
