--- a/static_analysis.ipynb
+++ b/static_analysis.ipynb
@@ -20,10 +20,15 @@
     "pd.options.display.max_columns = 999\n",
     "\n",
     "filename = 'US_Accidents_Dec21_updated.csv'\n",
-    "selected_features = ['ID', 'Severity',  'Start_Lng', 'Start_Lat', 'Distance(mi)', 'Side', 'City', 'County', 'State', 'Zipcode', 'Timezone', 'Temperature(F)', 'Wind_Speed(mph)', 'Humidity(%)',\n",
-    "                     'Pressure(in)', 'Precipitation(in)', 'Visibility(mi)', 'Wind_Direction', 'Weather_Condition', 'Sunrise_Sunset', 'Civil_Twilight', 'Time_Duration(min)', 'Hour', 'Weekday', 'Year']\n",
     "with open('mapping_us_states.json') as json_file:\n",
     "    us_states_map = json.load(json_file)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load Dataset"
    ]
   },
   {
@@ -442,6 +447,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract year month day hour and weekday information."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -460,6 +472,13 @@
     "# Extract the amount of time in the unit of minutes for each accident, round to the nearest integer\n",
     "td='Time_Duration(min)'\n",
     "acc_df[td]=round((acc_df['End_Time']-acc_df['Start_Time'])/np.timedelta64(1,'m'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature selection"
    ]
   },
   {
@@ -703,8 +722,17 @@
     }
    ],
    "source": [
+    "selected_features = ['ID', 'Severity',  'Start_Lng', 'Start_Lat', 'Distance(mi)', 'Side', 'City', 'County', 'State', 'Zipcode', 'Timezone', 'Temperature(F)', 'Wind_Speed(mph)', 'Humidity(%)',\n",
+    "                     'Pressure(in)', 'Precipitation(in)', 'Visibility(mi)', 'Wind_Direction', 'Weather_Condition', 'Sunrise_Sunset', 'Civil_Twilight', 'Time_Duration(min)', 'Hour', 'Weekday', 'Year']\n",
     "selected_df=acc_df[selected_features].copy()\n",
     "selected_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Geolocation Analysis"
    ]
   },
   {
@@ -717,6 +745,13 @@
     "city_df = pd.DataFrame(selected_df['City'].value_counts()).reset_index().rename(\n",
     "    columns={'index': 'City', 'City': 'Cases'})\n",
     "top_cities = pd.DataFrame(city_df.head(15))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Top 15 Cities in US with the most frequency of Car Accidents(2016-2021)"
    ]
   },
   {
@@ -761,6 +796,13 @@
     "ax.set_axisbelow(True)\n",
     "ax.grid(color='#b2d6c7', linewidth=1, axis='y', alpha=.3)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Number of Car accident in US States"
    ]
   },
   {
@@ -819,6 +861,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualization of accidents on map"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 124,
    "metadata": {},
@@ -857,10 +906,7 @@
     "clrs = []\n",
     "for i in range(0, size_state):\n",
     "    clrs.append(light_color_pools[i % len(light_color_pools)])\n",
-    "# clr = ['#FF5252', '#9575CD', '#FF8A80', '#FF4081', '#FFEE58', '#7C4DFF', '#00E5FF', '#81D4FA', '#64FFDA', '#8C9EFF',\n",
-    "#         '#FF5252', '#9575CD', '#FF8A80', '#FF4081', '#FFEE58', '#7C4DFF', '#00E5FF', '#81D4FA', '#64FFDA', '#8C9EFF']\n",
-    "# cmap = cm.get_cmap('gnuplot2', size_state)\n",
-    "# clrs = [matplotlib.colors.rgb2hex(cmap(i)) for i in range(cmap.N)]\n",
+    "\n",
     "cmap = cm.get_cmap('rainbow', size_state)\n",
     "clrs = [matplotlib.colors.rgb2hex(cmap(i)) for i in range(cmap.N)]\n",
     "\n",
@@ -1014,7 +1060,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Weather"
+    "Weather Analysis"
    ]
   },
   {
